extensions/tree-sitter-sintax/test/corpus/basics.txt
================
Print statement
================

>> "Hello, World!"

---

(source_file
  (print_statement
    (string (string_content))))

================
Variable assignment
================

x = 42

---

(source_file
  (assignment
    name: (identifier)
    value: (number)))

================
Typed variable
================

num x = 42

---

(source_file
  (typed_assignment
    type: (type)
    name: (identifier)
    value: (number)))

================
Function definition
================

fn (num a, num b) num add:
    return a + b

---

(source_file
  (function_definition
    (parameter_list
      (typed_parameter type: (type) name: (identifier))
      (typed_parameter type: (type) name: (identifier)))
    return_type: (type)
    name: (identifier)
    body: (block
      (return_statement
        (addition (identifier) (identifier))))))

================
If/else
================

if x > 5:
    >> "big"
else:
    >> "small"

---

(source_file
  (if_statement
    condition: (comparison (identifier) (number))
    body: (block (print_statement (string (string_content))))
    (else_clause
      body: (block (print_statement (string (string_content)))))))

================
For loop
================

for n in range(10):
    >> n

---

(source_file
  (for_statement
    variable: (identifier)
    iterable: (call_expression function: (identifier) (argument_list (number)))
    body: (block (print_statement (identifier)))))

================
Lambda
================

double = fn(x) -> x * 2

---

(source_file
  (assignment
    name: (identifier)
    value: (lambda
      (identifier)
      body: (multiplication (identifier) (number)))))

================
Method chain
================

>> "hello".upper()

---

(source_file
  (print_statement
    (method_call
      object: (string (string_content))
      method: (identifier))))

================
Use statement
================

use "std/math"

---

(source_file
  (use_statement
    path: (string (string_content))))

================
Comment
================

-- this is a comment

---

(source_file
  (comment))

================
Match/case
================

match x:
    case 1:
        >> "one"
    _:
        >> "other"

---

(source_file
  (match_statement
    value: (identifier)
    (case_clause
      value: (number)
      body: (block (print_statement (string (string_content)))))
    (default_clause
      body: (block (print_statement (string (string_content)))))))
